--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
                         <li  style="padding: 4px; padding-left: 8px;">
                             <a style="color: white;">Yönetim</a>
                         </li>
-                        <li  (click)="cikis()" style="padding: 4px; padding-left: 8px;">
+                        <li style="padding: 4px; padding-left: 8px;">
                             <a  style="color: white;">Çıkış</a>
 
                         </li>
@@ -69,11 +69,11 @@
     <div id="page-wrapper"  style="height: calc(100vh - 40px) !important; padding: 0; width: 100%;">
         <div  style="height: 100%; width: 100%; padding: 0; margin: 0; display: flex; ;">
             <div  style="border-right: 1px solid rgba(0, 0, 0, 0.06); width: 80px; height: 100%; background-color: #F1F5F9; z-index: 2;">
-                <div  style="display: flex; align-items: center;flex-direction: column;padding-top: 10px;">
+                <div  style="display: flex; align-items: center;flex-direction: column;padding-top: 10px; gap: 10px;">
 
 
                     <ng-container *ngFor="let item of moduls">
-                        <a [class.disabled]="item.disabled" routerLink="{{item.href}}"
+                        <a [class.disabled]="item.disabled" routerLink="{{item.href}}" (click)="routerChange(item.href)"
                             class="  hover:bg-slate-200 " style="display: flex; align-items: center;flex-direction: column; width: 100%; padding-bottom: 4px;cursor: pointer; text-align: center;">
                             <i style="font-size: 24px;color: #4B5563;" class="{{item.icon}} " [ngClass]="item.class" ></i>
                             <span style="color: #4B5563; font-weight: bold;" >{{item.modul}}</span>
@@ -86,7 +86,7 @@
 
 
 
-                <div class=" arka-plan" style="border-bottom: 1px solid #F9FAFB;">
+                <!-- <div class=" arka-plan" style="border-bottom: 1px solid #F9FAFB;">
 
                     <ol class="breadcrumb " style="height: 32px; display: flex;align-items: center; border-bottom-width:2px ; background-color: transparent;">
 
@@ -95,7 +95,7 @@
 
 
                     </ol>
-                </div>
+                </div> -->
 
 
                 <router-outlet></router-outlet>
