--- a/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.scss
+++ b/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.scss
@@ -172,3 +172,77 @@
 
 
 }
+
+
+
+
+
+
+
+
+:host ::ng-deep{
+    .mat-card {
+        background-color: #f4f4f4;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+      
+      .p-card {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+        width: 600px;
+      }
+      
+      .mat-card-header {
+        background-color: #3f51b5;
+        color: white;
+        border-radius: 8px 8px 0 0;
+      }
+      .p-card-title{
+        color: #7a0000;
+      }
+}
+
+
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(440px, 1fr)); /* Kartlar için responsive grid */
+  gap: 20px;
+  padding: 0;
+}
+
+.card {
+  background-color: white;
+  border-radius: 8px;
+  padding: 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  height: 195px;
+}
+
+.card .label {
+  max-width: 100%;
+  height: 25px;
+  border-radius: 8px;
+}
+
+.card-title {
+  font-size: 1.2em;
+  margin: 15px 0;
+}
+
+.card-description {
+  font-size: 1em;
+  color: #555;
+}
