--- a/src/app/pages/maliyet/maliyet.component.html
+++ b/src/app/pages/maliyet/maliyet.component.html
@@ -18,7 +18,7 @@
       <a class="tab-item">Makine Şasesi</a>
     </li>
   </ul>
-<div  style="height: calc(100vh - 85px); display: flex; width: 100%;">
+<div  style="height: calc(100vh - 80px); display: flex; width: 100%; overflow: auto;">
 
 
     <div  style="width: 100%;">
