--- a/src/app/pages/maliyet/makine-sasesi/makine-sasesi.component.html
+++ b/src/app/pages/maliyet/makine-sasesi/makine-sasesi.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 " style="display: grid; grid-template-columns:2fr 2fr 2fr 2fr ; gap: 4px;">
 
 
@@ -82,5 +82,197 @@
         <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;"
             >
             Hesapla</div>
+    </ng-template>
+</p-dialog> -->
+
+
+
+
+
+
+
+
+
+
+<div style="display: grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr ; gap: 4px;">
+    <div style="display: flex;
+            flex-direction: column;
+            border: 1px solid rgb(230, 230, 230);
+            color: white; padding: 4px;">
+        <makine-sasesi-maliyet-form [span]="130" [label]="'Şase Tipi'">
+            <p-dropdown form-control [options]="saseTipi" [(ngModel)]="frm.saseTipi" optionLabel="ad"
+                (ngModelChange)="onSaseTipiChange(frm.saseTipi)" />
+        </makine-sasesi-maliyet-form>
+        <makine-sasesi-maliyet-form [span]="130" [label]="'Kapasite'">
+            <p-dropdown form-control [options]="kapasite" [(ngModel)]="frm.kapasite" optionLabel="ad"
+                (ngModelChange)="onKapasiteChange(frm.kapasite)" />
+        </makine-sasesi-maliyet-form>
+
+        <div (click)="urunleriGoster()" form-control style="display: flex;margin-top: 10px;
+        align-items: center;
+        justify-content: center; 
+        font-weight: bold; 
+        cursor: pointer; 
+        background-color: #cacaca;
+        color: #201a1a;">
+            Ürünleri Göster
+        </div>
+    </div>
+
+    <div
+        style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+
+
+
+
+    </div>
+</div>
+
+<div style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
+    <div>
+        <div style="height: 485px;">
+            <p-accordion [activeIndex]="0">
+                <p-accordionTab header="Malzeme Giderleri">
+                    <makine-sasesi-malzeme-giderler-table [malzemeGiderler]="bilesenler"
+                        [selectedMalzemeGiderler]="selectedBilesenRow"
+                        [malzemeToplam]="malzemeToplam"></makine-sasesi-malzeme-giderler-table>
+                </p-accordionTab>
+            </p-accordion>
+        </div>
+        <div style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr  ; gap: 4px;">
+            <div
+                style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231); ">
+                <div class="card-container">
+                    <div class="card">
+                        <div *ngIf="!selectedURUN" class="label" style="border-bottom-left-radius: 0;
+                                                                        font-size: 16px;
+                                                                        border-bottom-right-radius: 0;
+                                                                        height: 20px;">
+                            Ürün Seçimi Yapılmadı!
+                        </div>
+                        <div *ngIf="selectedURUN" class="label" style="border-bottom-left-radius: 0; font-size: 16px;
+             border-bottom-right-radius: 0; height: 20px;">
+
+                            {{selectedURUN?.ad}}
+
+                        </div>
+
+                        <div class="label" style="display: flex;
+                                           align-items: center;
+                                           justify-content: center;
+                                           font-size: 14px;
+                                           font-weight: bold;color: gray;
+                                           border-top-left-radius: 0;
+                                           border-top-right-radius: 0;">
+
+                        </div>
+
+                        <div style="display: flex; gap:10px;">
+
+                            <div>
+                                <makine-sasesi-maliyet-form [span]="196" [label]="'Ortalama Çalışan Maaşı'">
+                                    <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi"
+                                        style="height: 27px;color: gray;"
+                                        class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </makine-sasesi-maliyet-form>
+
+                                <makine-sasesi-maliyet-form [span]="196" [label]="'Personel Sayısı'">
+                                    <input [disabled]="true" form-control [(ngModel)]="frm.personelSayisi"
+                                        style="height: 27px;color: gray;"
+                                        class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </makine-sasesi-maliyet-form>
+
+                                <makine-sasesi-maliyet-form [span]="196" [label]="'Günlük Üretim'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi"
+                                        style="height: 27px;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </makine-sasesi-maliyet-form>
+                                <makine-sasesi-maliyet-form [span]="196" [label]="'Kar (%)'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.kar" style="height: 27px;;"
+                                        class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </makine-sasesi-maliyet-form>
+                                <makine-sasesi-maliyet-form [span]="196" [label]="'Vade Farkı (%)'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.vadeFarki"
+                                        style="height: 27px;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </makine-sasesi-maliyet-form>
+                                <div style=" height: 50px;display: flex;justify-content: end;align-items: center;">
+                                    <div (click)="Hesapla()" [ngClass]="hesaplaButtonDisabled?'disabled-div':''"
+                                        style="background-color: #7F1D1D;display: flex;align-items: center;padding: 5px 10px;cursor: pointer;font-size: 14px; font-weight: bold;">
+                                        Maliyet Hesapla
+                                    </div>
+                                </div>
+                            </div>
+
+                            <makine-sasesi-maliyet-table [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam"
+                                [genelGiderToplam]="genelGiderToplam/frm.personelSayisi"
+                                [toplamMaliyet]="toplamMaliyet"></makine-sasesi-maliyet-table>
+
+                            <makine-sasesi-fiyat-table [pesinFiyat]="pesinFiyat" [vade1Fiyat]="vade1Fiyat"
+                                [vade2Fiyat]="vade2Fiyat" [vade3Fiyat]="vade3Fiyat"></makine-sasesi-fiyat-table>
+                        </div>
+
+
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+    </div>
+    <div>
+        <p-accordion [activeIndex]="0">
+            <p-accordionTab header="İşçilik Giderleri">
+                <makine-sasesi-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"
+                    (childFunc)="IscilikDeleteFunc($event)" (personelChildFunc)="personelEkleDialog($event)"
+                    [iscilikToplam]="iscilikToplam"></makine-sasesi-iscilik-giderler-table>
+
+
+            </p-accordionTab>
+            <p-accordionTab header="Genel Giderler (Gün Bazında)">
+                <makine-sasesi-genel-giderler-table [genelGiderler]="genelGiderler"
+                    [genelGiderToplam]="genelGiderToplam"
+                    [selectedGenelGiderler]="selectedBilesenRow"></makine-sasesi-genel-giderler-table>
+            </p-accordionTab>
+        </p-accordion>
+
+    </div>
+</div>
+
+
+<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
+    <ng-template pTemplate="header">
+        <span style="font-size: 20px; font-weight: bold;">Kabinler</span>
+    </ng-template>
+    <p-table id="row-check" [value]="urunler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Ad</th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
+                (click)="onRowClickUrunler(urun)">
+                <td>{{ urun.ad }}</td>
+                <td>
+                    İşlemler
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <ng-template pTemplate="footer" let-urun>
+        <div style="display: flex; justify-content: end;">
+            <div (click)="urunSec(selectedURUN)"
+                style="background-color: #008079;color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer; padding: 4px 8px;">
+                Urun Seç</div>
+        </div>
     </ng-template>
 </p-dialog>
