--- a/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
+++ b/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
@@ -1,84 +1,176 @@
 
-  <div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 " style="display: grid; grid-template-columns:2fr 2fr 1fr 2fr 2fr ; gap: 4px;">
-    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
 
-        <maliyet-form [span]="130" [label]="'Karkas Tipi'">
+
+
+
+<div style="display: grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr ; gap: 4px;">
+    <div style="display: flex;
+            flex-direction: column;
+            border: 1px solid rgb(230, 230, 230);
+            color: white; padding: 4px;">
+        <suspansiyon-maliyet-form [span]="130" [label]="'Karkas Tipi'">
             <p-dropdown form-control [options]="karkasTipi" [(ngModel)]="frm.karkasTipi" optionLabel="ad"
             (ngModelChange)="onKarkasTipiChange(frm.karkasTipi)" />
-        </maliyet-form>
+        </suspansiyon-maliyet-form>
 
-        <maliyet-form [span]="130" [label]="'Askı Tipi'">
+        <suspansiyon-maliyet-form [span]="130" [label]="'Askı Tipi'">
             <p-dropdown form-control [options]="askiTipi" [(ngModel)]="frm.askiTipi" optionLabel="ad"
             (ngModelChange)="onAskiTipiChange(frm.askiTipi)" />
-        </maliyet-form>
+        </suspansiyon-maliyet-form>
 
-        <maliyet-form  [span]="130" [label]="'Kapasite'">
+        <suspansiyon-maliyet-form  [span]="130" [label]="'Kapasite'">
             <p-dropdown form-control [options]="kapasite" [(ngModel)]="frm.kapasite" optionLabel="ad"
             (ngModelChange)="onKapasiteChange(frm.kapasite)" />
-        </maliyet-form>
-
-
+        </suspansiyon-maliyet-form>
+       
+   
     </div>
-    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
 
-
-        <maliyet-form  [span]="130" [label]="'Karkas Şekli'">
+    <div
+        style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+        <suspansiyon-maliyet-form  [span]="130" [label]="'Karkas Şekli'">
             <p-dropdown form-control [options]="karkasSekli" [(ngModel)]="frm.karkasSekli" optionLabel="ad"
             (ngModelChange)="onKarkasSekliChange(frm.karkasSekli)" />
-        </maliyet-form>
+        </suspansiyon-maliyet-form>
 
-        <maliyet-form [span]="130" [label]="'Ray Arası'">
+        <suspansiyon-maliyet-form [span]="130" [label]="'Ray Arası'">
             <input form-control [(ngModel)]="frm.rayArasi" name="rayArasi"
                 class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </maliyet-form>
+        </suspansiyon-maliyet-form>
+    
+        <div (click)="urunleriGoster()" form-control style="display: flex;margin-top: 10px;
+                 align-items: center;
+                 justify-content: center; 
+                 font-weight: bold; 
+                 cursor: pointer; 
+                 background-color: #cacaca;
+                 color: #201a1a;">
+                Ürünleri Göster
+            </div>
         
-        <div (click)="urunleriGoster()" form-control style="display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer ; background-color: #7F1D1D;">
-            Ürünleri Göster
+    </div>
+</div>
+
+<div style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
+    <div>
+        <div style="height: 485px;">
+            <p-accordion [activeIndex]="0">
+                <p-accordionTab header="Malzeme Giderleri">
+                    <suspansiyon-malzeme-giderler-table [malzemeGiderler]="bilesenler"
+                        [selectedMalzemeGiderler]="selectedBilesenRow"
+                        [malzemeToplam]="malzemeToplam"></suspansiyon-malzeme-giderler-table>
+                </p-accordionTab>
+            </p-accordion>
+        </div>
+        <div style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr  ; gap: 4px;">
+            <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231); ">
+                <div class="card-container">
+                    <div class="card">
+                        <div *ngIf="!selectedURUN" class="label" style="border-bottom-left-radius: 0;
+                                                                        font-size: 16px;
+                                                                        border-bottom-right-radius: 0;
+                                                                        height: 20px;">
+                         Ürün Seçimi Yapılmadı!
+                        </div>
+                        <div *ngIf="selectedURUN" class="label" style="border-bottom-left-radius: 0; font-size: 16px;
+             border-bottom-right-radius: 0; height: 20px;">
+
+                            {{selectedURUN?.ad}}
+
+                        </div>
+
+                        <div class="label" style="display: flex;
+                                           align-items: center;
+                                           justify-content: center;
+                                           font-size: 14px;
+                                           font-weight: bold;color: gray;
+                                           border-top-left-radius: 0;
+                                           border-top-right-radius: 0;">
+
+                        </div>
+
+                        <div style="display: flex; gap:10px;">
+
+                            <div>
+                                <suspansiyon-maliyet-form [span]="196" [label]="'Ortalama Çalışan Maaşı'">
+                                    <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi"
+                                        style="height: 27px;color: gray;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </suspansiyon-maliyet-form>
+
+                                <suspansiyon-maliyet-form [span]="196" [label]="'Personel Sayısı'">
+                                    <input [disabled]="true" form-control [(ngModel)]="frm.personelSayisi"
+                                        style="height: 27px;color: gray;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </suspansiyon-maliyet-form>
+
+                                <suspansiyon-maliyet-form [span]="196" [label]="'Günlük Üretim'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi"
+                                        style="height: 27px;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </suspansiyon-maliyet-form>
+                                <suspansiyon-maliyet-form [span]="196" [label]="'Kar (%)'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.kar" style="height: 27px;;"
+                                        class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </suspansiyon-maliyet-form>
+                                <suspansiyon-maliyet-form [span]="196" [label]="'Vade Farkı (%)'">
+                                    <input [disabled]="false" form-control [(ngModel)]="frm.vadeFarki"
+                                        style="height: 27px;" class="form-control shadow-none form-control-nullable"
+                                        id="exampleFormControlInput1">
+                                </suspansiyon-maliyet-form>
+                                <div style=" height: 50px;display: flex;justify-content: end;align-items: center;">
+                                    <div (click)="Hesapla()" [ngClass]="hesaplaButtonDisabled?'disabled-div':''"
+                                        style="background-color: #7F1D1D;display: flex;align-items: center;padding: 5px 10px;cursor: pointer;font-size: 14px; font-weight: bold;">
+                                        Maliyet Hesapla
+                                    </div>
+                                </div>
+                            </div>
+
+                            <suspansiyon-maliyet-table [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam"
+                                [genelGiderToplam]="genelGiderToplam/frm.personelSayisi"
+                                [toplamMaliyet]="toplamMaliyet"></suspansiyon-maliyet-table>
+
+                            <suspansiyon-fiyat-table [pesinFiyat]="pesinFiyat"
+                            [vade1Fiyat]="vade1Fiyat"
+                            [vade2Fiyat]="vade2Fiyat"
+                            [vade3Fiyat]="vade3Fiyat"></suspansiyon-fiyat-table>
+                        </div>
+
+
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
         </div>
     </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-        
-        <maliyet-form  [span]="196" [label]="'Ortalama Çalışan Maaşı'">
-            <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </maliyet-form> 
-       
-        <maliyet-form [span]="196" [label]="'Tahmini Çalışan Sayısı'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.tahminiCalisanSayisi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </maliyet-form> 
+    <div>
+        <p-accordion [activeIndex]="0">
+            <p-accordionTab header="İşçilik Giderleri">
+                <suspansiyon-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler" (childFunc)="IscilikDeleteFunc($event)" (personelChildFunc)="personelEkleDialog($event)"
+                    [iscilikToplam]="iscilikToplam"></suspansiyon-iscilik-giderler-table> 
 
-        <maliyet-form [span]="196" [label]="'Günlük Buton Üretimi'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi" 
-                   class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </maliyet-form> 
-        
-    </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;  background-color: rgb(231 231 231);box-shadow: 5px 3px 30px #858585;">
-        <suspansiyon-maliyet-table [malzemeToplam]="malzemeToplam" [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam" [genelGiderToplam]="genelGiderToplam" [toplamMaliyet]="toplamMaliyet"></suspansiyon-maliyet-table>
-    </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);box-shadow: 5px 3px 30px #858585;">
-        <suspansiyon-fiyat-table></suspansiyon-fiyat-table>
+                    
+            </p-accordionTab>
+            <p-accordionTab header="Genel Giderler (Gün Bazında)">
+                <suspansiyon-genel-giderler-table [genelGiderler]="genelGiderler" [genelGiderToplam]="genelGiderToplam"
+                    [selectedGenelGiderler]="selectedBilesenRow"></suspansiyon-genel-giderler-table>
+            </p-accordionTab>
+        </p-accordion>
+
     </div>
 </div>
 
-<div  style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
-    <div>
-        <suspansiyon-malzeme-giderler-table [malzemeGiderler]="bilesenler" [selectedMalzemeGiderler]="selectedBilesenRow"
-            [malzemeToplam]="malzemeToplam"></suspansiyon-malzeme-giderler-table>
-    </div>
-    <div>
-        <suspansiyon-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"></suspansiyon-iscilik-giderler-table>
-        <suspansiyon-genel-giderler-table [genelGiderler]="genelGiderler"
-            [selectedGenelGiderler]="selectedBilesenRow"></suspansiyon-genel-giderler-table>
-    </div>
-</div>
 
 <p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
     <ng-template pTemplate="header">
-        <span  style="font-size: 20px; font-weight: bold;">ÜRÜNLER</span>
+        <span style="font-size: 20px; font-weight: bold;">Kabinler</span>
     </ng-template>
-    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+    <p-table id="row-check" [value]="urunler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
         [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
         <ng-template pTemplate="header">
             <tr>
@@ -97,7 +189,10 @@
         </ng-template>
     </p-table>
     <ng-template pTemplate="footer" let-urun>
-        <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;">
-            Hesapla</div>
+        <div style="display: flex; justify-content: end;">
+            <div (click)="urunSec(selectedURUN)"
+            style="background-color: #008079;color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer; padding: 4px 8px;">
+            Urun Seç</div>
+        </div>
     </ng-template>
 </p-dialog>
