--- a/src/app/pages/tanimlar/kasnak/kasnak.component.html
+++ b/src/app/pages/tanimlar/kasnak/kasnak.component.html
@@ -1,1 +1,87 @@
-<p>kasnak works!</p>
+<kasnak-design>
+
+
+
+    <div design-buttons>
+      <div class="button-container">
+  
+        <div (click)="yeni()" class="button-grup ">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/add-file.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Yeni</span>
+        </div>
+  
+        <div (click)="sil()" class="button-grup" [ngClass]="buttonDisabled?'disabled':''">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/delete-file.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Sil</span>
+  
+        </div>
+  
+        <div (click)="guncelle()" class="button-grup" [ngClass]="buttonDisabled?'disabled':'' ">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/edit-file.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Düzelt</span>
+  
+        </div>
+  
+        <div class="button-grup">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/refresh.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Yenile</span>
+  
+        </div>
+  
+        <div class="button-grup">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/filter.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Filtrele</span>
+  
+        </div>
+  
+        <div class="button-grup disabled">
+          <div class="img-container">
+            <img src="../../../../../assets/icons/printer.png" alt="">
+          </div>
+          <span class="d-none d-sm-inline button-label">Yazdır</span>
+  
+        </div>
+  
+  
+  
+  
+  
+      </div>
+  
+    </div>
+  
+    
+    
+    
+      <div full-page>
+        <ag-grid-angular #agGrid style="height:calc(100vh - 180px);" class="ag-theme-quartz" [rowData]="rowData"
+          [defaultColDef]="defaultColDef" [columnDefs]="colDefs" (rowDoubleClicked)="rowDblClick($event)"
+          (gridReady)="getList($event)" (selectionChanged)="rowClick()" [rowSelection]="rowSelection" [rowHeight]="22"
+          [headerHeight]="23" [localeText]="localeText">
+        </ag-grid-angular>
+      </div>
+    
+    
+    </kasnak-design>
+    
+    
+    
+    
+  
+    
+    
+    
+    
+    
+    
+  
